Added ability for users to list NFTs on the marketplace

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,4 +49,8 @@
         @apply block w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 cursor-pointer dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400
     }
 
+    .selectedCard {
+        @apply bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500;
+    }
+
 }
